--- a/style.css
+++ b/style.css
@@ -1,160 +1,197 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
-    
+    font-family:gilroy;
+    color: #fff;
 }
-html,body{
+html,
+body {
     height: 100%;
     width: 100%;
+}
 
-}
 #main{
-    height: 100%;
+    min-height: 100%;
     width: 100%;
-    background-color: black;
-    display: flex;
+    background-color: #111;
+    padding: 100px 0;
+    display:flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-
-#main h1{
+#main>h1{
     font-size: 48px;
     display: flex;
     align-items: center;
 }
-
-#main >h1 span{
+#main>h1 span{
     margin: 0 15px;
     display: flex;
-
     align-items: center;
-
 }
-
-#main >h1 span img{
+#main>h1 span img{
     height: 40px;
+    rotate: 90deg;
     transition: 0.3s ease;
-
 }
-#main>#endec {
+#main #endec-div{
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: #1C1C1C;
-    padding: 15px;
-    width: fit-content;
-    height: fit-content;
-    margin: 20px;
-    border-radius: 8px;
+    justify-content: space-between;
+    background-color: #222;
+    border-radius: 10px;
+    padding: 8px 8px;
+    width: 28%;
+    margin: 35px 0;
 }
-
-#main>#endec h3 {
+#endec-div h3{
     font-size: 17px;
     display: flex;
-    align-items: center;
     border-radius: 8px;
     font-weight: 500;
-    padding: 6px 15px;
-    margin: 0px 20px;
-    width: fit-content;
+    align-items: center;
+    /* background-color: red; */
     cursor: pointer;
-    
+    padding: 12px 10px;
+    transition: 0.2s ease;
 }
-
-#main>#endec #encrypt{
+#enc-btn{
     background-color: #333;
 }
-
-#main>#enedec h3 span{
-   
+#endec-div h3 span{
     display: flex;
     align-items: center;
     margin-right: 10px;
 }
-#main>#endec h3 span img{
-    height: 30px;
-    width: 30px;
-    padding-top: 4px;
-    margin: 5px;
-
+#endec-div h3 img{
+    height: 20px;
 }
-
 #encryption{
     width: 45%;
-    
-    display: block;
-    align-items: start;
-    flex-direction: column;
-    justify-content: center;
-
-}
-#decryption{ 
-    width: 45%;
-    
-    display: none;
-    align-items: start;
-    flex-direction: column;
-    justify-content: center;
-
-}
-
-textarea{
-    background-color: #1C1C1C;
-    width:90%;
-    margin: 3% 5%;
-    border-radius: 8px;
-    padding: 10px;
-    border: 1px solid white;
-}
-#decryption #result{
-    display: none;
-    height: fit-content;
-
-}
-#encryption #enresult{
-    height: fit-content;
-    display: none;
-}
-input{
-    background-color: #1C1C1C;
-    width:90%;
-    margin: 3% 5%;
-    border-radius: 8px;
-    padding: 10px;
-    border: 1px solid white;
-}
-
-button{
-    background-image: linear-gradient(to bottom right, #1C1C1C, #1c1c1ce1);
-    width:90%;
-    cursor: pointer;
-    margin: 3% 5%;
-    border-radius: 8px;
-    padding: 10px;
-    border: none;
-    font-size: 25px;
-}
-
-h5{
-    color: #757575;
-    padding-left: 20px;
-}
-button span {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
-button span img{
-    
-    margin: 10px;
-    height: 40px;
-    
+#encryption h5{
+    font-size: 16px;
+    font-weight: 500;
+    color: #6e6e6e;
+    margin-bottom: 13px;
 }
-button:hover{
-    background-image: linear-gradient(to bottom right, #1c1c1ce1, #1C1C1C);
+#encryption textarea{
+    width: 100%;
+    height: 70px;
+    border: 1px solid #343434;
+    padding: 10px;
+    margin-bottom: 50px;
+    border-radius: 8px;
+    font-size: 17px;
+    outline: none;
+    background-color: #1C1C1C;
+}
+#encryption input{
+    width: 100%;
+    border: 1px solid #343434;
+    padding: 10px;
+    margin-bottom: 50px;
+    border-radius: 8px;
+    font-size: 16px;
+    outline: none;
+    background-color: #1C1C1C;
+}
+
+#encryption button{
+    display: flex;
+    align-items: center;
+    color: #6e6e6e;
+    background-color: #1C1C1C;
+
+    border: none;
+    width: 100%;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 10px;
+    color: #eee;
+    font-size: 17px;
+}
+button span{
+    display: flex;
+    margin-right: 10px;
+}
+button img{
+    height: 20px;
+}
+
+#decryption{
+    width: 45%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-around;
+    display: none;
+}
+
+#decryption h5{
+    font-size: 16px;
+    font-weight: 500;
+    color: #6e6e6e;
+    margin-bottom: 13px;
+}
+#decryption textarea{
+    width: 100%;
+    height: 70px;
+    border: 1px solid #343434;
+    padding: 10px;
+    margin-bottom: 50px;
+    border-radius: 8px;
+    font-size: 17px;
+    outline: none;
+    background-color: #1C1C1C;
+}
+#decryption input{
+    width: 100%;
+    border: 1px solid #343434;
+    padding: 10px;
+    margin-bottom: 50px;
+    border-radius: 8px;
+    font-size: 16px;
+    outline: none;
+    background-color: #1C1C1C;
+}
+
+#decryption button{
+    display: flex;
+    align-items: center;
+    color: #6e6e6e;
+    background-color: #1C1C1C;
+
+    border: none;
+    width: 100%;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 10px;
+    color: #eee;
+    font-size: 17px;
+}
+button span{
+    display: flex;
+    margin-right: 10px;
+}
+button img{
+    height: 20px;
+}
+
+#result{
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 18px;
+    background-color: #1C1C1C;
+    border: 1px solid #343434;
+    width: 45%;
+    display: none;
+    margin-top: 40px;
 }
